Complete workout handlers, except exercises checking
